<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	    
	<TextView android:id="@+id/title"
	           android:layout_height="wrap_content"
	           android:layout_width="match_parent"
	           android:text="@string/page_identification"
	           android:textColor="#CCC"
	           android:textSize="30dp"
	           android:gravity="center"
	           android:layout_margin="5dp"/>
	           
	<TextView android:id="@+id/textIdentification"
			  android:layout_margin="28dp"
			  android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/textIdentification"
              android:gravity="center"
              android:textColor="#CCC"
              />
              
	 <EditText android:id="@+id/login"
              android:tag="login"
              android:inputType="textEmailAddress"
              android:layout_height="wrap_content"
              android:layout_width="200dp"
              android:hint="@string/login"
              android:textColor="#000"
              android:padding="10dp"
              android:layout_marginTop="50dp"
              android:layout_marginLeft="65dp"
              />
              
              
	<EditText android:id="@+id/password"
              android:inputType="textPassword"
              android:layout_height="wrap_content"
              android:layout_width="200dp"
              android:hint="@string/password"
              android:textColor="#000"
              android:layout_marginTop="10dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="10dp"
              android:padding="10dp"
              android:layout_marginLeft="65dp"
              />

    <Button android:id="@+id/buttonLogin"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/buttonLogin"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="110dp"
            android:padding="10dp"/>
	          

</LinearLayout>

 
	
