<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:background="#000"
              >
              
	<TextView android:layout_height="wrap_content"
          	  android:layout_width="match_parent"
          	  android:gravity="center"
	          android:text="@string/list_accounts"
	          android:textColor="#808080"
	          android:layout_margin="5dp"
	          android:textSize="30dp"
	          />
	<TableLayout android:layout_height="wrap_content"
	           	android:layout_width="match_parent"
	           	android:layout_marginTop="10dp"
	           	android:background="#000"
	           	>
          <TableRow	 android:layout_width="wrap_content"
               		 android:layout_height="wrap_content"
               		 android:padding="5dp">

            <TextView android:layout_height="wrap_content"
                   	  android:layout_width="wrap_content"
                  	  android:layout_weight="1"
                  	  android:text="@string/account_name"
                   	  android:textColor="#808080"
                   	  android:textSize="20dp"
                   	  android:gravity="left"/>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/account_balance"
                    android:textColor="#808080"
                    android:textSize="20dp"
                    android:gravity="right"/>
        </TableRow>
        <TableRow android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:layout_marginBottom="10dp">

            <TextView android:id="@+id/table_header_separator"
                      android:layout_height="wrap_content"
                      android:layout_width="match_parent"
                      android:layout_weight="1"
                      android:textColor="#CCC"
                      android:gravity="center"/>
        </TableRow>

        <TableLayout android:id="@+id/table"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:background="#000" >

        </TableLayout>


    </TableLayout>
	          
              
              
</LinearLayout>
